2001-05-06  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Uniform): Don't use @PROGRAMS@.
	Fixes PR automake/154.

	For PR automake/160:
	* tests/Makefile.am (TESTS): Added subobj5.test and subobj6.test.
	(XFAIL_TESTS): Added subobj6.test.
	* tests/subobj6.test: New file.

	* automake.texi (Uniform): Mention dist_, nodist_, and nobase_.
	(Top level): Don't mention `flat'.
	(Extending): Likewise.
	(User Variables): New node.

	* distdir.am (distdir): Make subdirectory for each file.
	Fixes test subobj5.test.

	* tests/Makefile.am (TESTS): Added new file.
	(XFAIL_TESTS): Likewise.
	* tests/texinfo10.test: New file.

2001-05-05  Pavel Roskin <proski@gnu.org>

	* automake.in (scan_texinfo_file): Treat @defindex and @synindex
	in the same way as @defcodeindex and @syncodeindex respectively.

2001-05-05  Tom Tromey  <tromey@redhat.com>

	* mans.am (install-man%SECTION%): Minor cleanup.
	(uninstall-man%SECTION%): Likewise.

	* tests/Makefile.am (XFAIL_TESTS): Removed man.test.
	* mans.am (install-man%SECTION%): Handle dist_ and nodist_
	prefixes.
	(uninstall-man%SECTION%): Likewise.
	* automake.in (handle_man_pages): Handle dist_ and nodist_
	prefixes.

	* automake.texi (Future): Removed.
	(Depth): Removed.
	(Hello): Don't mention `deep'.
	(Top level): Likewise.

	* automake.in (conditional_true_when): Use a hash, not index().
	Also, a TRUE component always results in a true return.
	Fixes test cond10.test.  For PR automake/164.
	* tests/Makefile.am (XFAIL_TESTS): Removed cond10.test.

2001-05-05  Raja R Harinath  <harinath@cs.umn.edu>

	For PR automake/164:
	* tests/Makefile.am (TESTS): Added new file.
	(XFAIL_TESTS): Likewise.
	* tests/cond10.test: New file.

2001-05-05  Tom Tromey  <tromey@redhat.com>

	* texinfos.am (uninstall-info-am): Debian install-info v1.8.3
	prints to stderr.
	(install-info-am): Likewise.

2001-05-05  Pavel Roskin <proski@gnu.org>

	* automake.in (scan_texinfo_file): Don't push undefined values
	to @clean_suffixes.
