@@ -7796,20 +7796,20 @@ Operation modes:
       --no-force         only update Makefile.in's that are out of date
 
 Dependency tracking:
-  -i, --ignore-deps   disable dependency tracking code
-      --include-deps  enable dependency tracking code
+  -i, --ignore-deps      disable dependency tracking code
+      --include-deps     enable dependency tracking code
 
 Flavors:
-      --cygnus    assume program is part of Cygnus-style tree
-      --foreign   set strictness to foreign
-      --gnits     set strictness to gnits
-      --gnu       set strictness to gnu
+      --cygnus           assume program is part of Cygnus-style tree
+      --foreign          set strictness to foreign
+      --gnits            set strictness to gnits
+      --gnu              set strictness to gnu
 
 Library files:
-  -a, --add-missing     add missing standard files to package
-      --amdir=DIR       directory storing config files
-  -c, --copy            with -a, copy missing files (default is symlink)
-  -f, --force-missing   force update of standard files
+  -a, --add-missing      add missing standard files to package
+      --amdir=DIR        directory storing config files
+  -c, --copy             with -a, copy missing files (default is symlink)
+  -f, --force-missing    force update of standard files
 EOF
 
     my ($last, @lcomm);
