@@ -1,5 +1,8 @@
 2001-05-06  Tom Tromey  <tromey@redhat.com>
 
+	* automake.in (usage): Re-align explanatory text.
+	Fixes PR automake/148.
+
 	* automake.texi (Uniform): Don't use @PROGRAMS@.
 	Fixes PR automake/154.
 
